--- a/src/main/resources/public_html/index.html
+++ b/src/main/resources/public_html/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
 <head>
     <title>TODO supply a title</title>
@@ -12,7 +8,8 @@ and open the template in the editor.
 </head>
 <body>
 <div><h1> Bienvenido al servicio Web </h1></div>
-<button name="button">Base de Datos</button>
-<button name="button">Imagen</button>
+<div><h3> Con las siguientes rutas podrá ver imagenes y tablas de base de datos. </h3></div>
+<div><a href=picture.jpg>Imágen</a></div>
+<div><a href=dataBase>Base de Datos</a></div>
 </body>
 </html>
